--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Login">
-        <activity android:name=".userpage"></activity>
+        <activity android:name=".bikeproofs"></activity>
+        <activity android:name=".admin_add_bike" />
+        <activity android:name=".userpage" />
         <activity android:name=".adminpage" />
         <activity android:name=".signin" />
         <activity
